--- a/guess-the-number/index.html
+++ b/guess-the-number/index.html
@@ -49,12 +49,11 @@
       <h2 class="text-xl text-center p-4">
         Find the number between 0 and 500 !
       </h2>
-      <div id="scoreBox" class="block bg-black">
-        <div id="score" class="text-xs m-3 bg-red-600 w-12 ml-auto mr-1">
-          Tries: 0
-        </div>
+      <div id="scoreBox" class="flex justify-end">
+        <div class="text-base w-12">Tries :</div>
+        <div id="guessCount" class="text-base">0</div>
       </div>
-      <div id="gameForm" class="">
+      <form id="gameForm" class="">
         <div id="guessBox" class="h-24">
           <label for="yourGuess" class="m-3">Your Guess</label>
           <div class="flex items-center mt-2">
@@ -73,17 +72,29 @@
             </button>
           </div>
         </div>
+        <p id="hintBox" class="text-center h-8"></p>
         <canvas
           width="500px"
           height="40px"
           id="canvas"
           style="border: 1px solid black"
           class="rounded-md"
-        />
-      </div>
+        >
+        </canvas>
+      </form>
       <div class="flex">
         <div class="w-1/2"><p>0</p></div>
         <div class="w-1/2 text-right"><p>500</p></div>
+      </div>
+      <div class="flex">
+        <button
+          id="playAgainButton"
+          type="submit"
+          style="visibility: hidden"
+          class="w-28 h-10 bg-cyan-600 m-auto mt-2 rounded-md hover:bg-slate-100 hover:text-cyan-600 transform transition duration-500"
+        >
+          Play again
+        </button>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
