--- a/guess-the-number/index.html
+++ b/guess-the-number/index.html
@@ -44,7 +44,7 @@
     <div
       id="gameContainer"
       style="width: 500px"
-      class="m-auto mb-6 relative -top-44 z-0 font-Protest-Strike fonts text-xl text-white bg-slate-600"
+      class="m-auto relative mb-6 -top-44 left[200] z-0 font-Protest-Strike fonts text-xl text-white bg-slate-600"
     >
       <h2 class="text-xl text-center p-4">
         Find the number between 0 and 500 !
